# mcp-oauth-proxy-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_TOKEN_EXCHANGE.md  client.py  decode_token.py  fastmcp-3.2.4.patch  generate_token.py  get_gitlab_token.py  main.py  pyproject.toml  test_integration.py
.github/workflows/: ci.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
