[project]
name = "mcp-oauth2-demo"
version = "0.1.0"
description = "Hello world MCP server with OAuth2/OIDC authentication"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43",
    "fastmcp>=3.2.4",
    "httpx>=0.27",
    "py-key-value-aio[disk]>=0.4.4",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
]
