[project]
name = "mcp-oauth2-demo"
version = "0.1.0"
description = "Hello world MCP server with OAuth2/OIDC authentication"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43",
    "fastmcp>=3.2.4",
    "httpx>=0.27",
    "mcp>=1.27,<1.28",
    "py-key-value-aio[disk]>=0.4.4",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
